--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services: 
-    portainer-agent:
+    agent:
         image:
             image: portainer/agent
             container_name: Portainer-agent
